[project]
name = "data-science-kdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4~=4.14.2",
    "chromadb~=1.2.1",
    "matplotlib~=3.10.8",
    "nltk~=3.9.2",
    "numpy~=2.3.4",
    "openai~=2.4.0",
    "pandas~=2.3.3",
    "protobuf~=6.33.0",
    "pydantic~=2.12.2",
    "python-dotenv~=1.1.1",
    "pyyaml~=6.0.3",
    "requests~=2.32.5",
    "seaborn~=0.13.2",
    "sentence-transformers~=5.1.1",
    "streamlit~=1.51.0",
    "tiktoken~=0.12.0",
    "google-genai",
    "jupyter>=1.1.1",
    "groq>=1.0.0",
    "anthropic>=0.76.0",
    "lab>=8.8",
    "statsmodels>=0.14.6",
]
